apps/kustomize/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-app
  namespace: argocd
spec:
  parentRefs:
  - kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - argocd.apps.timgiertz.com
  rules:
  - matches:
    backendRefs:
    - name: argocd-server
      port: 80
---
